crates/runtime/tests/models/snapshots/integration_models__models__embedding__openai_embeddings_basic.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "array_1536_items",
      "index": 0,
      "object": "embedding"
    }
  ],
  "model": "openai_embeddings",
  "object": "list",
  "usage": {
    "prompt_tokens": 8,
    "total_tokens": 8
  }
}
