crates/runtime/tests/models/snapshots/integration_models__models__embedding__titan-1024_dim_1024.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "array_1024_items",
      "index": 0,
      "object": "embedding"
    }
  ],
  "model": "titan-1024",
  "object": "list",
  "usage": {
    "prompt_tokens": 9,
    "total_tokens": 9
  }
}
