crates/runtime/tests/models/snapshots/integration_models__models__embedding__titan-v2_multiple_texts_float_512.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "array_512_items",
      "index": 0,
      "object": "embedding"
    },
    {
      "embedding": "array_512_items",
      "index": 1,
      "object": "embedding"
    },
    {
      "embedding": "array_512_items",
      "index": 2,
      "object": "embedding"
    }
  ],
  "model": "titan-v2",
  "object": "list",
  "usage": {
    "prompt_tokens": 33,
    "total_tokens": 33
  }
}
