crates/runtime/tests/models/snapshots/integration_models__models__embedding__titan-v2_single_text_float_512.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "array_512_items",
      "index": 0,
      "object": "embedding"
    }
  ],
  "model": "titan-v2",
  "object": "list",
  "usage": {
    "prompt_tokens": 9,
    "total_tokens": 9
  }
}
